DEV/src/objects/Registration__c.object
<CustomObject>
    <fields>
        <fullName>Caste__c</fullName>
        <label>Caste</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Registration__c</fullName>
        <inlineHelpText>Enter the current date</inlineHelpText>
        <label>Date of Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identification_Marks__c</fullName>
        <label>Identification Marks</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <inlineHelpText>Enter the Joining Date of Candidate</inlineHelpText>
        <label>Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Enter Name of Candidate</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Registration</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Enrollment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>